apps/vaultwarden/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"vaultwarden-ingress","namespace":"default"},"spec":{"ingressClassName":"traefik","rules":[{"host":"vaultwarden.homelab.local","http":{"paths":[{"backend":{"service":{"name":"vaultwarden","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["vaultwarden.homelab.local"],"secretName":"homelab-tls"}]}}
  creationTimestamp: "2026-05-03T11:40:54Z"
  generation: 1
  name: vaultwarden-ingress
  namespace: default
  resourceVersion: "21280"
  uid: ebd264ee-62e9-41cb-9c30-93591b12f0c9
spec:
  ingressClassName: traefik
  rules:
  - host: vaultwarden.homelab.local
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vaultwarden.homelab.local
    secretName: homelab-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.104
    - ip: 192.168.0.105
