apps/vaultwarden/vaultwarden-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"vaultwarden-public-ingress","namespace":"default"},"spec":{"ingressClassName":"traefik","rules":[{"host":"vaultwarden.spencer-kennedy.com","http":{"paths":[{"backend":{"service":{"name":"vaultwarden","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-05-09T06:02:30Z"
  generation: 1
  name: vaultwarden-public-ingress
  namespace: default
  resourceVersion: "608701"
  uid: d9e84944-94e6-465d-8a61-d4582426dfab
spec:
  ingressClassName: traefik
  rules:
  - host: vaultwarden.spencer-kennedy.com
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.104
    - ip: 192.168.0.105
