apps/vaultwarden/vaultwarden-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
spec:
  selector:
    app: vaultwarden
  ports:
  - port: 80
    targetPort: 80
